--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^10.2.0",
+    "@workos-inc/node": "^7.1.0",
     "astro": "^4.6.3",
+    "iron-session": "^8.0.1",
+    "jose": "^5.2.4",
+    "matcher": "^5.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240405.0",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "wrangler": "^3.51.2"
   }
 }
